--- a/mysite/requirements.txt
+++ b/mysite/requirements.txt
@@ -1,3 +1,51 @@
-djangorestframework
-requests
-rest_framework_swagger
+appdirs==1.4.3
+asgiref==3.4.1
+blinker==1.4
+CacheControl==0.12.6
+certifi==2019.11.28
+chardet==3.0.4
+click==7.1.2
+colorama==0.4.3
+contextlib2==0.6.0
+coreapi==2.3.3
+coreschema==0.0.4
+distlib==0.3.0
+distro==1.4.0
+Django==3.2.7
+django-rest-swagger==2.2.0
+djangorestframework==3.12.4
+Flask==1.1.2
+Flask-Login==0.5.0
+Flask-Mail==0.9.1
+flask-marshmallow==0.14.0
+Flask-SQLAlchemy==2.4.4
+html5lib==1.0.1
+idna==2.8
+ipaddr==2.2.0
+itsdangerous==1.1.0
+itypes==1.2.0
+Jinja2==2.11.2
+lockfile==0.12.2
+MarkupSafe==1.1.1
+marshmallow==3.10.0
+marshmallow-sqlalchemy==0.24.2
+msgpack==0.6.2
+numpy==1.19.4
+openapi-codec==1.3.2
+packaging==20.3
+pep517==0.8.2
+progress==1.5
+pyparsing==2.4.6
+pytoml==0.1.21
+pytz==2021.1
+requests==2.22.0
+retrying==1.3.3
+simplejson==3.17.6
+six==1.14.0
+SQLAlchemy==1.3.22
+sqlparse==0.4.2
+toml==0.10.2
+uritemplate==4.1.1
+urllib3==1.25.8
+webencodings==0.5.1
+Werkzeug==1.0.1
