--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 django
 djangorestframework
 requests
-rest_framework_swagger
+django-rest-swagger
 asgiref==3.4.1
 certifi==2021.10.8
 charset-normalizer==2.0.10
